refact Arguments.filterAndClean